# serverless-sample-app

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE-3rdparty.csv  Makefile  NOTICE  README.md  build-all.sh  build.sh  cdk-deploy  cdk-deploy-all.sh  cdk-deploy.sh  cdk-destroy.sh  handler.js  handler.py  inject_inline_code.awk  pre-build.sh  publish.sh  serverless-sample-app.postman_collection.json  serverless-sample-app.sln  static-analysis.datadog.yml  template.yaml
.github/: CODEOWNERS  (+4 more)
src/product-search-service/: Makefile  README.md  app.py  dev_requirements.txt  lambda_requirements.txt  package-lock.json  pyproject.toml  template.yaml
src/product-search-service/cdk/: app.py  product_search_stack.py  requirements.txt  setup.py
src/product-search-service/cdk/product_search_service/: app.py  constants.py  product_search_stack.py  utils.py
src/product-search-service/infra/: dev.tfvars.example  main.tf  outputs.tf  providers.tf  variables.tf
src/product-search-service/infra/modules/python-lambda-function/: main.tf  output.tf  variables.tf
src/product-search-service/infra/services/product-search/: application.tf  database.tf  events.tf  iam.tf  outputs.tf
src/product-search-service/product_search_service/: container.py
src/product-search-service/product_search_service/adapters/: bedrock_embedder.py  bedrock_generator.py  metadata_repository.py  product_api_client.py  protocols.py  vector_repository.py
src/product-search-service/product_search_service/handlers/: catalog_sync.py  product_search.py
src/product-search-service/product_search_service/models/: product.py
src/product-search-service/product_search_service/observability/: messaging.py
src/product-search-service/tests/integration/: api_driver.py  test_search.py
src/product-search-service/tests/unit/: test_adapters.py  test_catalog_sync.py  test_product_search.py
src/rust/: .dockerignore  Cargo.toml  Dockerfile-web  README.md  cdk.json  deploy.sh  package-lock.json  package.json  package.sh  serverless-analytics-service.yml  serverless-api-worker.yml  serverless-api.yml  serverless-inventory-acl.yml  serverless-inventory-ordering-service.yml  serverless-pricing-service.yml  serverless-product-event-publisher.yml  serverless-shared.yml  template-analytics-service.yaml  template-api.yaml  template-inventory-acl.yaml  template-inventory-api.yaml  template-inventory-ordering-service.yaml  template-pricing-service.yaml  template-product-acl.yaml  template-product-api-worker.yaml  template-product-event-publisher.yaml  template-shared.yaml  template.yaml  tsconfig.json
src/rust/infra/: main.tf  providers.tf  variables.tf
src/rust/infra/modules/api-gateway/: main.tf
src/rust/infra/modules/api-gateway-cors-resource/: output.tf
src/rust/infra/modules/api-gateway-lambda-integration/: main.tf
src/rust/infra/modules/lambda-function/: main.tf
src/rust/infra/services/analytics-service/: application.tf  data.tf  iam.tf  variables.tf
src/rust/infra/services/inventory-acl/: application.tf  data.tf  iam.tf  parameters.tf
src/rust/infra/services/inventory-api/: application.tf  database.tf  iam.tf
src/rust/infra/services/inventory-ordering-service/: application.tf  data.tf  iam.tf
src/rust/infra/services/pricing-service/: application.tf  data.tf  iam.tf  parameters.tf
src/rust/infra/services/product-acl/: application.tf  iam.tf
src/rust/infra/services/product-api/: application.tf  data.tf  database.tf  iam.tf
src/rust/infra/services/product-api-worker/: application.tf  data.tf  iam.tf  variables.tf
src/rust/infra/services/product-public-event-publisher/: application.tf  data.tf  iam.tf
src/rust/infra/services/shared/: main.tf
src/rust/lib/analytics-backend/: analyticsBackendStack.ts
src/rust/lib/constructs/: lambdaFunction.ts
src/rust/lib/inventory-acl/: inventoryAclStack.ts  inventoryServiceBackgroundWorker.ts
src/rust/lib/inventory-api/: inventoryApiStack.ts
src/rust/lib/inventory-ordering-service/: inventoryOrderingService.ts  inventoryOrderingServiceStack.ts
src/rust/lib/inventory-ordering-service/workflows/: workflow.setStock.asl.json
src/rust/lib/product-api/: api.ts  product-api-stack.ts
src/rust/lib/product-api-workers/: api.ts  product-api-worker-stack.ts
src/rust/lib/product-pricing/: product-pricing-stack.ts
src/rust/lib/product-public-event-publisher/: product-public-event-publisher-stack.ts  publicEventPublisher.ts
src/rust/lib/shared-resources/: shared-resources-stack.ts
src/rust/scripts/: target.sh
src/rust/src/inventory-acl/core/: Cargo.toml
src/rust/src/observability/: Cargo.toml
src/user-management-service/: CLAUDE.md  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json  package.sh  pup.yaml  rust.sln  serverless-analytics-service.yml  serverless-api-worker.yml  serverless-api.yml  serverless-inventory-acl.yml  serverless.yml  template-analytics-service.yaml  template-api.yaml  template-inventory-acl.yaml  template-inventory-api.yaml  template-product-acl.yaml  template-product-api-worker.yaml  template.yaml  user-management-service.sln
src/user-management-service/infra/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf
src/user-management-service/lib/analytics-backend/: analyticsBackendStack.ts  analyticsWorker.ts
src/user-management-service/lib/constructs/: lambdaFunction.ts  resiliantQueue.ts  sharedFunctionProps.ts
src/user-management-service/lib/inventory-ordering-service/: inventoryOrderingService.ts
src/user-management-service/lib/product-acl/: productAclBackgroundWorker.ts  productAclStack.ts
src/user-management-service/lib/product-api-workers/: api.ts
src/user-management-service/lib/product-pricing/: product-pricing-stack.ts  productPricingService.ts
src/user-management-service/lib/shared-resources/: shared-resources-stack.ts
src/user-management-service/lib/user-management-api/: api.ts  background-worker.ts  user-management-stack.ts  userManagementServiceProps.ts
src/user-management-service/src/integration_tests/: Cargo.toml
src/user-management-service/src/observability/: Cargo.toml
(+2251 files in other folders)
