[workspace]
resolver = "2"
members = [
  "src/product-api/lambdas/create_product",
  "src/product-api/lambdas/get_product",
  "src/product-api/lambdas/update_product",
  "src/product-api/lambdas/delete_product",
  "src/product-api/lambdas/handle_pricing_updated",
  "src/product-api/core",
  "src/product-pricing/core",
  "src/product-pricing/lambdas/product_created_pricing_handler",
  "src/product-pricing/lambdas/product_updated_pricing_handler",
  "src/product-event-publisher/core",
  "src/product-event-publisher/lambdas/product_public_event_publisher",
  "src/inventory-acl/core",
  "src/inventory-acl/lambdas/product_created_handler",
  "src/inventory-ordering/core",
  "src/inventory-ordering/lambdas/product_added_handler",
  "src/observability"
]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
serde_json = "1.0"
tracing-subscriber = "0.3.8"
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-datadog = { version = "0.11.0", features = ["reqwest-client"] }
opentelemetry_sdk = { version = "0.23", features = ["trace"] }
opentelemetry-http = { version = "0.12", features = ["reqwest"] }
opentelemetry-stdout = "0.4.0"
opentelemetry-semantic-conventions = "0.25"
tracing-opentelemetry = "0.24.0"
tracing = "0.1.40"