[workspace]
resolver = "2"
members = [
  "src/user-management/lambdas/create_user",
  "src/user-management/lambdas/get_user_details",
  "src/user-management/lambdas/login",
  "src/user-management/lambdas/handle_order_completed_for_user",
  "src/user-management/core",
  "src/integration_tests",
  "src/observability"
]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
serde_json = "1.0"
tracing-subscriber = "0.3.19"
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-datadog = { version = "0.11.0", features = ["reqwest-client"] }
opentelemetry_sdk = { version = "0.23", features = ["trace"] }
opentelemetry-http = { version = "0.12", features = ["reqwest"] }
opentelemetry-stdout = "0.4.0"
opentelemetry-semantic-conventions = "0.25"
tracing-opentelemetry = "0.24.0"
tracing = "0.1.41"