[workspace]
resolver = "2"
members = [
  "src/user-management/lambdas/create_user",
  "src/user-management/lambdas/get_user_details",
  "src/user-management/lambdas/login",
  "src/user-management/lambdas/handle_order_completed_for_user",
  "src/user-management/lambdas/oauth_authorize",
  "src/user-management/lambdas/oauth_authorize_callback",
  "src/user-management/lambdas/oauth_client_get",
  "src/user-management/lambdas/oauth_client_delete",
  "src/user-management/lambdas/oauth_client_update",
  "src/user-management/lambdas/oauth_dcr",
  "src/user-management/lambdas/oauth_introspect",
  "src/user-management/lambdas/oauth_revoke",
  "src/user-management/lambdas/oauth_token",
  "src/user-management/lambdas/oauth_metadata",
  "src/user-management/core",
  "src/integration_tests",
  "src/observability",
]

[workspace.dependencies]
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.219"
serde_json = "1.0.140"
tracing-subscriber = "0.3.20"
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-datadog = { version = "0.11.0", features = ["reqwest-client"] }
opentelemetry_sdk = { version = "0.23", features = ["trace"] }
tracing-opentelemetry = "0.24.0"
tracing = "0.1.41"
