[workspace]
resolver = "2"
members = [
  "src/user-management/lambdas/create_user",
  "src/user-management/lambdas/get_user_details",
  "src/user-management/lambdas/login",
  "src/user-management/lambdas/handle_order_completed_for_user",
  "src/user-management/lambdas/oauth_authorize",
  "src/user-management/lambdas/oauth_authorize_callback",
  "src/user-management/lambdas/oauth_client_get",
  "src/user-management/lambdas/oauth_client_delete",
  "src/user-management/lambdas/oauth_client_update",
  "src/user-management/lambdas/oauth_dcr",
  "src/user-management/lambdas/oauth_introspect",
  "src/user-management/lambdas/oauth_revoke",
  "src/user-management/lambdas/oauth_token",
  "src/user-management/lambdas/oauth_metadata",
  "src/user-management/core",
  "src/integration_tests",
  "src/observability",
]

[workspace.dependencies]
thiserror = "2.0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.219"
serde_json = "1.0.148"
tracing-subscriber = "0.3.22"
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
  "semconv_experimental",
] }
opentelemetry-otlp = { version = "0.31.0", features = [
  "grpc-tonic",
  "trace",
  "metrics",
  "logs",
] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry-appender-log = "0.31.0"
tracing-opentelemetry = "0.32.0"
tracing = "0.1.44"
