[package]
name = "observability"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.15.1"
lambda_http = "0.14"
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-datadog = {workspace = true}
opentelemetry_sdk = {workspace = true}
opentelemetry-http = {workspace = true}
opentelemetry-stdout = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
tracing-opentelemetry = {workspace = true}
serde = { version = "1.0.215", features = ["derive"] }