[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dev-dependencies]
mockall = "0.13.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ssm = "1.62.0"
aws-sdk-eventbridge = "1.62.0"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "http2",
]}