[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dev-dependencies]
observability = {path = "../observability"}
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ssm = "1.62.0"
aws-sdk-eventbridge = "1.62.0"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "http2",
  "json"
]}

tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
url = "2.5"
regex = "1.12"