[package]
name = "observability"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.18.0"
lambda_http = "0.17"
serde = { version = "1.0.218", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }

serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-datadog = {workspace = true}
opentelemetry_sdk = {workspace = true}
tracing-opentelemetry = {workspace = true}