[package]
name = "observability"
version = "0.1.0"
edition = "2024"

[dependencies]
aws_lambda_events = "1.0.1"
lambda_http = "1.0"
serde = { version = "1.0.218", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }

serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry_sdk = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
opentelemetry-otlp = { workspace = true}
opentelemetry-resource-detectors = { workspace = true }
opentelemetry-appender-log = { workspace = true }
opentelemetry-stdout = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
tracing-opentelemetry = {workspace = true}
anyhow = "1.0.100"