[package]
name = "inventory-ordering-core"
version = "0.1.0"
edition = "2021"

[dependencies]
observability = {path = "../../observability"}
aws-sdk-sfn = "1.64"
uuid = {version = "1.15.1", features = ["v4"]}
async-trait = "0.1"

thiserror = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-datadog = {workspace = true}
opentelemetry_sdk = {workspace = true}
opentelemetry-http = {workspace = true}
opentelemetry-stdout = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
tracing-opentelemetry = {workspace = true}