[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
observability = {path = "../../observability"}
lambda_http = "0.13"
aws-sdk-dynamodb = "1.45"
aws-sdk-sns = "1.44"
uuid = {version = "1.10.0", features = ["v4"]}
async-trait = "0.1"

thiserror = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-datadog = {workspace = true}
opentelemetry_sdk = {workspace = true}
opentelemetry-http = {workspace = true}
opentelemetry-stdout = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
tracing-opentelemetry = {workspace = true}