[package]
name = "inventory_api_web"
version = "0.1.0"
edition = "2021"

[dependencies]
observability = {path = "../../observability"}
inventory_api_core = {path = "../core"}
aws-sdk-eventbridge = "1.47"
aws-sdk-dynamodb = "1.49"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
async-trait = "0.1.86"
axum = "0.8.1"
axum-tracing-opentelemetry = "0.21.1"

thiserror = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true,features = ["signal"]}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-bunyan-formatter = "0.3.9"
opentelemetry = {workspace = true}
opentelemetry-datadog = {workspace = true}
opentelemetry_sdk = {workspace = true, features = ["rt-tokio"]}
opentelemetry-http = {workspace = true}
opentelemetry-stdout = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
tracing-opentelemetry = {workspace = true}
reqwest = "0.11.27"
tower-http = {version = "0.6.2", features = ["trace"]}
tower = "0.5.2"