[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
observability = {path = "../../observability"}
lambda_http = "0.15"
aws-sdk-dynamodb = "1.67"
aws-sdk-eventbridge = "1.64"
async-trait = "0.1"
argon2 = "0.5.3"
jsonwebtoken = "9.3"
chrono = "0.4.40"

thiserror = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-opentelemetry = {workspace = true}
