[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
observability = {path = "../../observability"}
lambda_http = "0.15"
aws-sdk-dynamodb = "1.67"
aws-sdk-eventbridge = "1.64"
async-trait = "0.1"
argon2 = "0.5.3"
jsonwebtoken = "9.3"
chrono = "0.4.40"
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"
base64 = "0.21"

thiserror = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-opentelemetry = {workspace = true}
urlencoding = "2.1.3"
