[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
observability = {path = "../../observability"}
lambda_http = "1.0"
aws-sdk-dynamodb = "1.67"
aws-sdk-eventbridge = "1.64"
async-trait = "0.1"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
chrono = "0.4.42"
uuid = { version = "1.18", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"

thiserror = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-opentelemetry = {workspace = true}
urlencoding = "2.1.3"
