[package]
name = "analytics_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
observability = {path = "../../../observability"}
lambda_runtime = "0.13.0"
aws_lambda_events = "0.15.1"
dogstatsd = "0.11.1"
serde = { version = "1.0.215", features = ["derive"] }

serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-datadog = {workspace = true}
opentelemetry_sdk = {workspace = true}
opentelemetry-http = {workspace = true}
opentelemetry-stdout = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
tracing-opentelemetry = {workspace = true}