[package]
name = "product-added-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
observability = {path = "../../../observability"}
inventory-ordering-core = { path = "../../core" }
lambda_runtime = "0.13.0"
aws_lambda_events = "0.15.1"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sfn = "1.48"

serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-datadog = {workspace = true}
opentelemetry_sdk = {workspace = true}
opentelemetry-http = {workspace = true}
opentelemetry-stdout = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
tracing-opentelemetry = {workspace = true}
serde = { version = "1.0.210", features = ["derive"] }