[package]
name = "handle-pricing-updated"
version = "0.1.0"
edition = "2021"

[dependencies]
observability = {path = "../../../observability"}
shared = { path = "../../core" }
lambda_runtime = "0.13.0"
aws_lambda_events = "0.15.1"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.45"
aws-sdk-sns = "1.44"

serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-datadog = {workspace = true}
opentelemetry_sdk = {workspace = true}
opentelemetry-http = {workspace = true}
opentelemetry-stdout = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
tracing-opentelemetry = {workspace = true}