[package]
name = "product-public-event-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
event_publisher_core = {path = "../../core"}
observability = {path = "../../../observability"}
lambda_runtime = "0.13.0"
aws_lambda_events = "0.16.0"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-eventbridge = "1.64"
serde = { version = "1.0.217", features = ["derive"] }

serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-datadog = {workspace = true}
opentelemetry_sdk = {workspace = true}
opentelemetry-http = {workspace = true}
opentelemetry-stdout = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
tracing-opentelemetry = {workspace = true}