[package]
name = "product-updated-pricing-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
observability = {path = "../../../observability"}
pricing-core = { path = "../../core" }
lambda_runtime = "0.13.0"
aws_lambda_events = "0.15.1"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sns = "1.46"

serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-datadog = {workspace = true}
opentelemetry_sdk = {workspace = true}
opentelemetry-http = {workspace = true}
opentelemetry-stdout = {workspace = true}
opentelemetry-semantic-conventions = {workspace = true}
tracing-opentelemetry = {workspace = true}
serde = { version = "1.0.210", features = ["derive"] }