[package]
name = "create-user"
version = "0.1.0"
edition = "2021"

[dependencies]
observability = {path = "../../../observability"}
shared = { path = "../../core" }
lambda_http = "0.17"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.67"
aws-sdk-eventbridge = "1.64"
uuid = { version = "1.10", features = ["v4"] }

tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
opentelemetry = {workspace = true}