[package]
name = "handle-order-completed"
version = "0.1.0"
edition = "2021"

[dependencies]
observability = {path = "../../../observability"}
shared = { path = "../../core" }
lambda_runtime = "0.14.4"
aws_lambda_events = "0.18.0"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.67"

serde_json = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-opentelemetry = {workspace = true}
opentelemetry = {workspace = true}
async-trait = "0.1.89"