[package]
name = "handle-order-completed"
version = "0.1.0"
edition = "2024"

[dependencies]
observability = {path = "../../../observability"}
shared = { path = "../../core" }
lambda_runtime = "1.0.2"
aws_lambda_events = "1.0.2"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.67"

serde_json = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-opentelemetry = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry_sdk = {workspace = true}
async-trait = "0.1.89"